<resources>
    <string name="app_name">Cookfolio</string>
    <string name="title_home">Cookfolio</string>
    <string name="title_calendar">Calendari</string>
    <string name="title_recipes">Receptes</string>
    <string name="user_profile">Perfil</string>
    <string name="title_search">Cerca</string>
    <string name="profile_image_desc">Lorem Ipsum</string>
    <string name="recipe_image_desc">Lorem ipsum Recipe Lorem Ipsum Recipe</string>
    <string name="like_icon_desc">Like Icon</string>
    <string name="comment_icon_desc">Comment</string>
    <string name="cerca">Cerca</string>
    <string name="cookfolio">Cookfolio</string>
    <string-array name="difficulty_levels">
        <item>Fàcil</item>
        <item>Intermig</item>
        <item>Difícil</item>
    </string-array>
</resources>