<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/search_section"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_plus_box_outline"
        android:title="@string/title_recipes" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/user_profile"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/user_profile"/>

</menu>