<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cookfolio.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:label="@string/title_calendar"
        tools:layout="" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.cookfolio.NewRecipe.NewRecipeFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipe_creation" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cookfolio.Perfil_Despensa.ProfileFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_navigation_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_despensa"
            app:destination="@id/navigation_despensa" />
    </fragment>

    <fragment
        android:id="@+id/navigation_despensa"
        android:name="com.example.cookfolio.Perfil_Despensa.DespensaFragment"
        android:label="Rebost"
        tools:layout="@layout/despensa_fragment" >
        <action
            android:id="@+id/action_navigation_despensa_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.cookfolio.Search.SearchFragment"
        android:label="Cerca"
        tools:layout="@layout/navigation_search" />
</navigation>
