<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/profile_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/recipe_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="396dp"
        android:layout_height="300dp"
        android:layout_above="@+id/recipe_timestamp"
        android:layout_below="@id/profile_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/recipe_image_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_background"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeName" />

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Rigatoni Alla Napolitana"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recipe_image"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/profile_image"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

    <!-- Like and comment icons -->
    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum "
        app:layout_constraintEnd_toEndOf="@+id/recipe_image"
        app:layout_constraintStart_toStartOf="@+id/recipe_image"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image" />

    <TextView
        android:id="@+id/recipe_timestamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:text="0000-01-01"
        android:textAlignment="viewEnd"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/description"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/comment_icon"
        app:layout_constraintTop_toTopOf="@+id/comment_icon" />

    <ImageView
        android:id="@+id/like_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/like_icon_desc"
        android:src="@drawable/ic_like_unliked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngredient" />

    <ImageView
        android:id="@+id/comment_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/comment_icon_desc"
        android:src="@drawable/ic_comment"
        app:layout_constraintBottom_toBottomOf="@+id/like_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/like_icon"
        app:layout_constraintTop_toTopOf="@+id/like_icon" />

    <Button
        android:id="@+id/buttonIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Veure ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/tempsCoccio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="15m"
        app:layout_constraintBottom_toTopOf="@+id/recipe_image"
        app:layout_constraintEnd_toEndOf="@+id/recipe_timestamp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dificultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Difícil"
        app:layout_constraintBottom_toTopOf="@+id/recipe_image"
        app:layout_constraintEnd_toEndOf="@+id/recipe_timestamp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/tempsCoccio"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
